--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "8.0.0",
     "@nebular/eva-icons": "8.0.0",
+    "@nebular/moment": "^9.1.0-rc.6",
     "@nebular/security": "8.0.0",
     "@nebular/theme": "8.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
